--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">PokeAccount</string>
+    <string name="app_name">277Test</string>
+    <string name="navigation_home">Home</string>
+    <string name="navigation_dashboard">Dash</string>
+    <string name="navigation_notifications">Notification</string>
+    <string name="navigation_person">Person</string>
+    <string name="bottomNavigationView">BottomNavigationView</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="google_maps_key">AIzaSyDIQu0Y2L7Bj8vFwY1C1m6ezqkP2C6xAVc</string>
+    <string name="place_autocomplete">Search_test</string>
 </resources>
